# DynamicRender-1

./: .gitignore  README.md  pyproject.toml
.github/workflows/: master.yml
dynamicrender/: Core.py  DynAdditional.py  DynConfig.py  DynForward.py  DynHeader.py  DynMajor.py  DynText.py  Tools.py
sample/: __init__.py
